# fontanf-shape

./: CMakeLists.txt  LICENSE  README.ipynb  README.md
.github/workflows/: build.yml
data/tests/approximation/approximate_shape_by_line_segments/: 0.json  1.json
data/tests/boolean_operations/difference/: 0.json  000.json  001.json  002.json  12.json
data/tests/boolean_operations/extract_outline/: 0.json
data/tests/boolean_operations/intersection/: 0.json  000.json  001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  1.json  10.json  12.json  4.json  6.json  7.json
data/tests/boolean_operations/symmetric_difference/: 000.json
data/tests/boolean_operations/union/: 000.json  001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  1.json  10.json  11.json  2.json  3.json  4.json  5.json  7.json  8.json
data/tests/clean/clean_extreme_slopes_outer/: 0.json
data/tests/element_intersections/shape_shape/: 0.json
data/tests/elements_intersections/shape_shape/: 0.json
data/tests/elements_intersections/shape_shape_element/: 0.json
data/tests/intersect_shape_shape_element/: 0.json
data/tests/offset/deflate/: 0.json  000.json
data/tests/offset/inflate/: 0.json  000.json  001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json
data/tests/offset/inflate_shape/: 0.json  1.json  2.json
data/tests/simplification/: 0.json  1.json
include/shape/: approximation.hpp  boolean_operations.hpp  clean.hpp  convex_hull.hpp  convex_partition.hpp  element_intersections.hpp  elements_intersections.hpp  equalize.hpp  extract_borders.hpp  intersection_tree.hpp  offset.hpp  self_intersections_removal.hpp  shape.hpp  shapes_intersections.hpp  simplification.hpp  supports.hpp  trapezoid.hpp  trapezoidation.hpp  writer.hpp
scripts/: visualize.py
src/: CMakeLists.txt  approximation.cpp  boolean_operations.cpp  clean.cpp  convex_hull.cpp  convex_partition.cpp  element_intersections.cpp  elements_intersections.cpp  equalize.cpp  extract_borders.cpp  intersection_tree.cpp  offset.cpp  self_intersections_removal.cpp  shape.cpp  shapes_intersections.cpp  simplification.cpp  supports.cpp  trapezoidation.cpp  writer.cpp
test/: CMakeLists.txt  approximation_test.cpp  boolean_operations_test.cpp  clean_test.cpp  convex_hull_test.cpp  element_intersections_test.cpp  elements_intersections_test.cpp  extract_borders_test.cpp  intersection_tree_test.cpp  labeling_test.cpp  offset_test.cpp  self_intersections_removal_test.cpp  shape_test.cpp  shapes_intersections_test.cpp  simplification_test.cpp  supports_test.cpp  test_params.hpp  trapezoid_test.cpp  trapezoidation_test.cpp
(+2 files in other folders)
